--- a/socialapp-spa/tsconfig.json
+++ b/socialapp-spa/tsconfig.json
@@ -5,17 +5,35 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
-],
-"typeRoots": [
-  "node_modules/@types",
-  "src/typings.d.ts"
-]
+ // "files": [],
+  //"references": [
+    //{
+      //"path": "./tsconfig.app.json"
+    //},
+    //{
+      //"path": "./tsconfig.spec.json"
+    //}
+//],
+
+"compileOnSave": false,
+  "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
+    "downlevelIteration": true,
+    "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "es2020",
+    "typeRoots": [
+      "node_modules/@types",
+      "src/typings.d.ts"
+    ],
+    "lib": [
+      "es2018",
+      "dom"
+    ]
+  }
 }
