--- a/SocialApp.API/SocialApp.API.csproj
+++ b/SocialApp.API/SocialApp.API.csproj
@@ -4,9 +4,9 @@
     <UserSecretsId>FAF76B96-798C-11D2-AAD1-006008C78BC7</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.NETCore.Targets" Version="3.1.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.0"/>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.0"/>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.2-preview-10803222715"/>
@@ -14,5 +14,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="CloudinaryDotNet" Version="1.14.0"/>
   </ItemGroup>
 </Project>
